feat: add multi-service docker-compose and Dockerfiles for all microservices

--- a/interact/legal-document-analysis/Dockerfile
+++ b/interact/legal-document-analysis/Dockerfile
@@ -18,6 +18,7 @@ COPY requirements.txt dependencies.txt ./
 
 # Install Python dependencies (use dependencies.txt for exact version pinning)
 RUN pip install --no-cache-dir -r dependencies.txt
+RUN pip install --no-cache-dir langchain-groq
 
 # Download spaCy model
 RUN python -m spacy download en_core_web_sm
