--- a/interact/legal-document-analysis/Dockerfile
+++ b/interact/legal-document-analysis/Dockerfile
@@ -8,6 +8,8 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     tesseract-ocr \
     tesseract-ocr-eng \
+    tesseract-ocr-hin \
+    tesseract-ocr-mar \
     libtesseract-dev \
     && rm -rf /var/lib/apt/lists/*
 
